# SistemaDiedrico

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_web.bat  imgui.ini  presets.json  shell.html  web_build.bat
assets/: imgui.ini  languages.csv  lenguages.csv  presets.json
cmake/: LinkASSIMP.cmake  LinkGLFW.cmake  LinkIMGUI.cmake  LinkImGuiFileDialog.cmake  LinkImGuizmo.cmake  LinkJSON.cmake  emscripten.cmake
docs/: diedrico.data  diedrico.js  diedrico.wasm  documentation_es.md  index.html
src/: app.cpp  app.h  camera.cpp  camera.h  dihedral.cpp  dihedral.h  json.h  main.cpp  renderer.cpp  renderer.h  scene.h  style.h  ui.cpp  ui.h
